--- a/.github/workflows/20240227_Test_Local.yml
+++ b/.github/workflows/20240227_Test_Local.yml
@@ -23,7 +23,7 @@ jobs:
         run: | 
           token=$(curl -s -H "Content-Type: application/json" -X POST --data '{"client_id": "7951640B37F54D4894603420F37B4F8F", "client_secret": "8d5582f037f927c032eee6349ed1a10523918cadc8a14640e95412b6af54345f" }' https://xray.cloud.getxray.app/api/v2/authenticate);
           echo "Authentication token=$token"; 
-          response=$(curl -s -H "Content-Type: text/xml" -X POST -H "Authorization: Bearer ${token:1: -1}" --data @"result.xml" https://xray.cloud.getxray.app/api/v2/import/execution/junit?projectKey=EY&testExecKey=EY-6);
+          response=$(curl -s -H "Content-Type: text/xml" -X POST -H "Authorization: Bearer ${token:1: -1}" --data @"result.xml" https://xray.cloud.getxray.app/api/v2/import/execution/junit?projectKey=EKNC&testExecKey=EKNC-6);
           echo "Xray issue=$response"
 
 
